lib/src/bindings.dart


  void cpConstraintSetPostSolveFunc(
    ffi.Pointer<cpConstraint> constraint,
    cpConstraintPostSolveFuncD postSolveFunc,
    int callbackId,
  ) {
    return _cpConstraintSetPostSolveFunc(
      constraint,
      postSolveFunc,
      callbackId,
    );
  }

  late final _cpConstraintSetPostSolveFuncPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpConstraintPostSolveFuncD, ffi.Uint64)>>('cpConstraintSetPostSolveFunc');
  late final _cpConstraintSetPostSolveFunc = _cpConstraintSetPostSolveFuncPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpConstraintPostSolveFuncD, int)>();

  cpDataPointer cpConstraintGetUserData(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetUserData(
      constraint,
    );
  }

  late final _cpConstraintGetUserDataPtr = _lookup<ffi.NativeFunction<cpDataPointer Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetUserData');
  late final _cpConstraintGetUserData = _cpConstraintGetUserDataPtr.asFunction<cpDataPointer Function(ffi.Pointer<cpConstraint>)>();

  void cpConstraintSetUserData(
    ffi.Pointer<cpConstraint> constraint,
    cpDataPointer userData,
  ) {
    return _cpConstraintSetUserData(
      constraint,
      userData,
    );
  }

  late final _cpConstraintSetUserDataPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpDataPointer)>>('cpConstraintSetUserData');
  late final _cpConstraintSetUserData = _cpConstraintSetUserDataPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpDataPointer)>();

  double cpConstraintGetImpulse(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintGetImpulse(
      constraint,
    );
  }

  late final _cpConstraintGetImpulsePtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpConstraintGetImpulse');
  late final _cpConstraintGetImpulse = _cpConstraintGetImpulsePtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  int cpConstraintIsGearJoint(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintIsGearJoint(
      constraint,
    );
  }

  late final _cpConstraintIsGearJointPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintIsGearJoint');
  late final _cpConstraintIsGearJoint = _cpConstraintIsGearJointPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpGearJoint> cpGearJointAlloc() {
    return _cpGearJointAlloc();
  }

  late final _cpGearJointAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpGearJoint> Function()>>('cpGearJointAlloc');
  late final _cpGearJointAlloc = _cpGearJointAllocPtr.asFunction<ffi.Pointer<cpGearJoint> Function()>();

  ffi.Pointer<cpGearJoint> cpGearJointInit(
    ffi.Pointer<cpGearJoint> joint,
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    double phase,
    double ratio,
  ) {
    return _cpGearJointInit(
      joint,
      a,
      b,
      phase,
      ratio,
    );
  }

  late final _cpGearJointInitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpGearJoint> Function(ffi.Pointer<cpGearJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpFloat, cpFloat)>>('cpGearJointInit');
  late final _cpGearJointInit = _cpGearJointInitPtr.asFunction<ffi.Pointer<cpGearJoint> Function(ffi.Pointer<cpGearJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, double, double)>();

  ffi.Pointer<cpConstraint> cpGearJointNew(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    double phase,
    double ratio,
  ) {
    return _cpGearJointNew(
      a,
      b,
      phase,
      ratio,
    );
  }

  late final _cpGearJointNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpFloat, cpFloat)>>('cpGearJointNew');
  late final _cpGearJointNew = _cpGearJointNewPtr.asFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, double, double)>();

  double cpGearJointGetPhase(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpGearJointGetPhase(
      constraint,
    );
  }

  late final _cpGearJointGetPhasePtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpGearJointGetPhase');
  late final _cpGearJointGetPhase = _cpGearJointGetPhasePtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpGearJointSetPhase(
    ffi.Pointer<cpConstraint> constraint,
    double phase,
  ) {
    return _cpGearJointSetPhase(
      constraint,
      phase,
    );
  }

  late final _cpGearJointSetPhasePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpGearJointSetPhase');
  late final _cpGearJointSetPhase = _cpGearJointSetPhasePtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  double cpGearJointGetRatio(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpGearJointGetRatio(
      constraint,
    );
  }

  late final _cpGearJointGetRatioPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpGearJointGetRatio');
  late final _cpGearJointGetRatio = _cpGearJointGetRatioPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpGearJointSetRatio(
    ffi.Pointer<cpConstraint> constraint,
    double ratio,
  ) {
    return _cpGearJointSetRatio(
      constraint,
      ratio,
    );
  }

  late final _cpGearJointSetRatioPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpGearJointSetRatio');
  late final _cpGearJointSetRatio = _cpGearJointSetRatioPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  int cpConstraintIsDampedSpring(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintIsDampedSpring(
      constraint,
    );
  }

  late final _cpConstraintIsDampedSpringPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintIsDampedSpring');
  late final _cpConstraintIsDampedSpring = _cpConstraintIsDampedSpringPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpDampedSpring> cpDampedSpringAlloc() {
    return _cpDampedSpringAlloc();
  }

  late final _cpDampedSpringAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpDampedSpring> Function()>>('cpDampedSpringAlloc');
  late final _cpDampedSpringAlloc = _cpDampedSpringAllocPtr.asFunction<ffi.Pointer<cpDampedSpring> Function()>();

  ffi.Pointer<cpDampedSpring> cpDampedSpringInit(
    ffi.Pointer<cpDampedSpring> joint,
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect anchorA,
    cpVect anchorB,
    double restLength,
    double stiffness,
    double damping,
  ) {
    return _cpDampedSpringInit(
      joint,
      a,
      b,
      anchorA,
      anchorB,
      restLength,
      stiffness,
      damping,
    );
  }

  late final _cpDampedSpringInitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpDampedSpring> Function(ffi.Pointer<cpDampedSpring>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, cpFloat, cpFloat, cpFloat)>>(
          'cpDampedSpringInit');
  late final _cpDampedSpringInit =
      _cpDampedSpringInitPtr.asFunction<ffi.Pointer<cpDampedSpring> Function(ffi.Pointer<cpDampedSpring>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, double, double, double)>();

  ffi.Pointer<cpConstraint> cpDampedSpringNew(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect anchorA,
    cpVect anchorB,
    double restLength,
    double stiffness,
    double damping,
  ) {
    return _cpDampedSpringNew(
      a,
      b,
      anchorA,
      anchorB,
      restLength,
      stiffness,
      damping,
    );
  }

  late final _cpDampedSpringNewPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, cpFloat, cpFloat, cpFloat)>>('cpDampedSpringNew');
  late final _cpDampedSpringNew = _cpDampedSpringNewPtr.asFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, double, double, double)>();

  cpVect cpDampedSpringGetAnchorA(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedSpringGetAnchorA(
      constraint,
    );
  }

  late final _cpDampedSpringGetAnchorAPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpDampedSpringGetAnchorA');
  late final _cpDampedSpringGetAnchorA = _cpDampedSpringGetAnchorAPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedSpringSetAnchorA(
    ffi.Pointer<cpConstraint> constraint,
    cpVect anchorA,
  ) {
    return _cpDampedSpringSetAnchorA(
      constraint,
      anchorA,
    );
  }

  late final _cpDampedSpringSetAnchorAPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpDampedSpringSetAnchorA');
  late final _cpDampedSpringSetAnchorA = _cpDampedSpringSetAnchorAPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  cpVect cpDampedSpringGetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedSpringGetAnchorB(
      constraint,
    );
  }

  late final _cpDampedSpringGetAnchorBPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpDampedSpringGetAnchorB');
  late final _cpDampedSpringGetAnchorB = _cpDampedSpringGetAnchorBPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedSpringSetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
    cpVect anchorB,
  ) {
    return _cpDampedSpringSetAnchorB(
      constraint,
      anchorB,
    );
  }

  late final _cpDampedSpringSetAnchorBPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpDampedSpringSetAnchorB');
  late final _cpDampedSpringSetAnchorB = _cpDampedSpringSetAnchorBPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  double cpDampedSpringGetRestLength(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedSpringGetRestLength(
      constraint,
    );
  }

  late final _cpDampedSpringGetRestLengthPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpDampedSpringGetRestLength');
  late final _cpDampedSpringGetRestLength = _cpDampedSpringGetRestLengthPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedSpringSetRestLength(
    ffi.Pointer<cpConstraint> constraint,
    double restLength,
  ) {
    return _cpDampedSpringSetRestLength(
      constraint,
      restLength,
    );
  }

  late final _cpDampedSpringSetRestLengthPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpDampedSpringSetRestLength');
  late final _cpDampedSpringSetRestLength = _cpDampedSpringSetRestLengthPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  double cpDampedSpringGetStiffness(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedSpringGetStiffness(
      constraint,
    );
  }

  late final _cpDampedSpringGetStiffnessPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpConstraint>)>>('cpDampedSpringGetStiffness');
  late final _cpDampedSpringGetStiffness = _cpDampedSpringGetStiffnessPtr.asFunction<double Function(ffi.Pointer<cpConstraint>)>();

  void cpDampedSpringSetStiffness(
    ffi.Pointer<cpConstraint> constraint,
    double stiffness,
  ) {
    return _cpDampedSpringSetStiffness(
      constraint,
      stiffness,
    );
  }

  late final _cpDampedSpringSetStiffnessPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpFloat)>>('cpDampedSpringSetStiffness');
  late final _cpDampedSpringSetStiffness = _cpDampedSpringSetStiffnessPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, double)>();

  double cpDampedSpringGetDamping(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpDampedSpringGetDamping(
      constraint,
    );
  }
